[Shalin James] Added routes and resolve

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <app-navigation></app-navigation>
-<app-board-list></app-board-list>
+<router-outlet></router-outlet>
