--- a/src/app/board-list/board-list.component.html
+++ b/src/app/board-list/board-list.component.html
@@ -1,5 +1,7 @@
 <ul>
   <li *ngFor="let board of boards">
-    <h2>{{board.title}}</h2>
+    <h2>
+      <a routerLink="/board/{{board.path}}">{{board.title}}</a>
+    </h2>
   </li>
 </ul>
