refactor: replaces the state management, uses ngxs

--- a/src/app/board-list/board-list.component.html
+++ b/src/app/board-list/board-list.component.html
@@ -1,7 +1,10 @@
-<ul>
-  <li *ngFor="let board of boards">
+<pre>{{(boards$ | async|json)}}</pre>
+
+<ul *ngIf="boards$ | async as boards">
+  <li *ngFor="let index of keys(boards)">
     <h2>
-      <a routerLink="/board/{{board.path}}">{{board.title}}</a>
+      {{index}} -- {{boards[index] | json}}
+      <a routerLink="/board/{{boards[index].path}}">{{boards[index].title}}</a>-->
     </h2>
   </li>
 </ul>
