feat: includes user managment webservices

--- a/src/app/board-list/board-list.component.html
+++ b/src/app/board-list/board-list.component.html
@@ -1,7 +1,7 @@
 <ul *ngIf="boards$ | async as boards">
   <li *ngFor="let index of keys(boards)">
     <h2>
-      <a routerLink="/board/{{boards[index].path}}">{{boards[index].title}}</a>-->
+      <a routerLink="/board/{{boards[index].path}}">{{boards[index].title}}</a>
     </h2>
   </li>
 </ul>
