--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,2 +1,4 @@
-<app-board-list></app-board-list>
-<app-new-board></app-new-board>
+<div class="center-pane">
+  <app-board-list></app-board-list>
+  <app-new-board></app-new-board>
+</div>
