--- a/src/app/new-board/new-board.component.html
+++ b/src/app/new-board/new-board.component.html
@@ -1,16 +1,5 @@
-<mat-accordion class="add-new-board">
-  <mat-expansion-panel [expanded]="showPanel === true" (opened)="toggleNew()">
-    <mat-expansion-panel-header>
-      <mat-panel-title>
-        Add New Board
-      </mat-panel-title>
-      <mat-panel-description>
-      </mat-panel-description>
-    </mat-expansion-panel-header>
-    <mat-form-field>
-      <input matInput #boardName (keyup.enter)="onEnter(boardName.value); boardName.value=''" (keyup.escape)="toggleNew()" placeholder="Board Name">
-    </mat-form-field>
-  </mat-expansion-panel>
-</mat-accordion>
-<mat-form-field *ngIf="showNew">
-</mat-form-field>
+<span class="done">
+  <button mat-fab color="primary" (click)="openNewBoardDialog()">
+    <mat-icon>add</mat-icon>
+  </button>
+</span>
