feat: navigate to board
Board component implementation:
-(comp)style is implemented
-(state)selectedBoard state is introduced
-(comp) navigating from board-list to board sets the selectedBoard state
-(refactor) moved the types into a folder

--- a/src/app/board-list/board-list.component.html
+++ b/src/app/board-list/board-list.component.html
@@ -1,8 +1,8 @@
 <div class="board-list" *ngIf="boards$ | async as boards">
-  <mat-card class="board-card" *ngFor="let index of keys(boards)" routerLink="/board/{{boards[index].path}}">
+  <mat-card class="board-card" *ngFor="let index of keys(boards)" (click)="selectBoard(boards[index])">
     <mat-card-header>
       <div mat-card-avatar>
-        <mat-icon>list</mat-icon>
+        <mat-icon>dashboard</mat-icon>
       </div>
       <mat-card-title class="title">
         {{boards[index].title}}
