--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -1,3 +1,15 @@
-<p>
-  board works!
-</p>
+<div class="list-container" *ngIf="board">
+  <div class="list-header">{{board.title}}</div>
+  <div class="list">
+    <mat-card class="list-card" *ngFor="let key of board.list">
+      <mat-card-header>
+        <mat-card-title class="title">
+          List Title
+        </mat-card-title>
+      </mat-card-header>
+      <mat-card-content>
+        Contents
+      </mat-card-content>
+    </mat-card>
+  </div>
+</div>
