--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,6 +1,8 @@
 <div>
   <mat-toolbar color="primary">
-    <span class="center">Task Board</span>
+    <span class="center">
+      <a routerLink="/dashboard">ngx-tasker</a>
+    </span>
     <span>
       <button mat-icon-button [mat-menu-trigger-for]="menu">
         <mat-icon>more_vert</mat-icon>
