--- a/src/app/board-module/board/board.component.css
+++ b/src/app/board-module/board/board.component.css
@@ -1,9 +1,15 @@
-.list-container {
+.board-container {
   height: 100%;
   display: flex;
   flex-direction: column;
   margin-right: 0;
   transition: margin 0.1s ease-in;
+}
+
+.board-header {
+  margin: 1rem;
+  text-align: center;
+  color: rgba(0, 0, 0, 0.6);
 }
 
 .list {
@@ -17,18 +23,4 @@
   right: 0;
   bottom: 0;
   left: 0;
-}
-
-.list .list-card {
-  display: inline-block;
-  border-radius: 0.4rem;
-  background: rgba(0, 0, 0, 0.1);
-  margin: 0.8rem;
-  width: 15rem;
-}
-
-.list-header {
-  margin: 1rem;
-  text-align: center;
-  color: rgba(0, 0, 0, 0.6);
 }
