--- a/src/app/navigation/navigation.component.css
+++ b/src/app/navigation/navigation.component.css
@@ -15,6 +15,10 @@ mat-toolbar span {
 mat-toolbar span.center {
   flex: 1 1 auto;
 }
+mat-toolbar span.center a {
+  color: inherit;
+  text-decoration: none;
+}
 .done {
   position: fixed;
   bottom: 20px;
