style: change background color of elements
Modified the look and feel:
-background color of html->body is changed
-divider is extended to touch the border of the list-comp

--- a/src/app/list/list/list.component.html
+++ b/src/app/list/list/list.component.html
@@ -4,7 +4,7 @@
       {{list.title}}
     </mat-card-title>
   </mat-card-header>
-  <mat-divider [inset]="true"></mat-divider>
+  <mat-divider [inset]="true" class="seperator"></mat-divider>
   <mat-card-content class="contents">
     Contents
   </mat-card-content>
