--- a/src/app/list/list/list.component.css
+++ b/src/app/list/list/list.component.css
@@ -1,7 +1,6 @@
 .list-card {
   display: inline-block;
-  border-radius: 0.4rem;
-  background: rgba(0, 0, 0, 0.1);
+  background: rgba(1, 1, 1, 0.03);
   margin: 0.8rem;
   width: 15rem;
 }
@@ -12,4 +11,10 @@
 
 .list-card .contents {
   margin-top: 2rem;
+}
+
+.list-card .seperator {
+  margin: 0 -1.5rem;
+  width: auto;
+  border-top-color: rgba(0, 0, 0, 0.2);
 }
