feature: add functionality to edit list title
Includes:
-new action SetListTitle, which will update the appropriate title
-saving title on enterkey

--- a/src/app/board-module/board/board.component.html
+++ b/src/app/board-module/board/board.component.html
@@ -1,6 +1,6 @@
 <div class="board-container" *ngIf="board.list">
   <div class="board-header">{{board.title}}</div>
   <div class="list">
-    <ngx-tasker-list *ngFor="let key of keys(board.list)" [list]="board.list[key]"></ngx-tasker-list>
+    <ngx-tasker-list *ngFor="let key of keys(board.list)" [list]="board.list[key]" [id]="key"></ngx-tasker-list>
   </div>
 </div>
