--- a/src/app/board-module/list/list/list.component.css
+++ b/src/app/board-module/list/list/list.component.css
@@ -4,10 +4,11 @@
   margin: 0.8rem;
   width: 15rem;
 }
-
+.list-card .header {
+  cursor: pointer;
+}
 .list-card .title {
   font-weight: bold;
-  cursor: pointer;
 }
 
 .list-card .contents {
@@ -25,6 +26,9 @@
   border-top: 0;
 }
 
-.list-card .title-edit-from input {
-  margin: 0;
+.list-card .title input {
+  border-radius: 0.2em;
+  padding: 0.3rem;
+  border: 1px solid #5c6bc0;
+  box-shadow: 0 0 2px 0 #1a237e;
 }
