feat(board): enable editing the board title
Includes:
-created a reuseable component inline-text-editor
-used in both list title editing and board title editing

--- a/src/app/board-module/board/board.component.html
+++ b/src/app/board-module/board/board.component.html
@@ -1,5 +1,8 @@
 <div class="board-container" *ngIf="board.list">
-  <div class="board-header">{{board.title}}</div>
+  <div class="board-header">
+    <ngxtasker-inline-text-editor [value]="board.title" (newvalue)="saveBoardTitle($event)">
+    </ngxtasker-inline-text-editor>
+  </div>
   <div class="list">
     <ngx-tasker-list *ngFor="let key of keys(board.list)" [list]="board.list[key]" [id]="key"></ngx-tasker-list>
   </div>
