style (board): align board title to the left
includes:
-style to move the board title to the left
-cursor to pointer when hovering over board title

--- a/src/app/board-module/board/board.component.css
+++ b/src/app/board-module/board/board.component.css
@@ -8,8 +8,9 @@
 
 .board-header {
   margin: 1rem;
-  text-align: center;
   color: rgba(0, 0, 0, 0.6);
+  font-size: 1.1rem;
+  cursor: pointer;
 }
 
 .list {
@@ -19,7 +20,7 @@
   overflow-y: hidden;
   padding-bottom: 8px;
   position: absolute;
-  top: 15vh;
+  top: 16vh;
   right: 0;
   bottom: 0;
   left: 0;
