--- a/src/app/board-module/board/board.component.html
+++ b/src/app/board-module/board/board.component.html
@@ -5,5 +5,6 @@
   </div>
   <div class="list">
     <ngx-tasker-list *ngFor="let key of keys(board.list)" [list]="board.list[key]" [id]="key"></ngx-tasker-list>
+    <ngx-tasker-add-list></ngx-tasker-add-list>
   </div>
 </div>
