feat(add-new-list): enable user to add new list of a board
Includes:
-inline-text-editor will receive label to set as input label
-inline-text-editor will receive placeholder to set as placeholder for input
-inline-text-editor will emit if the edit is canceled via closed property

--- a/src/app/board-module/list/add-list/add-list.component.html
+++ b/src/app/board-module/list/add-list/add-list.component.html
@@ -1,6 +1,8 @@
 <div class="add-list-container">
-  <button mat-fab color="primary">
+  <button mat-fab color="primary" *ngIf="!openTextInput" (click)="openNewListText()">
     <mat-icon>add</mat-icon>
   </button>
-
+  <ngx-tasker-inline-text-editor *ngIf="openTextInput" [open]="openTextInput" (newvalue)="saveNewListTitle($event)" (closed)="isNewListEditClosed($event)"
+    [placeholder]="'New List Title'" [label]="'List Name'">
+  </ngx-tasker-inline-text-editor>
 </div>
