--- a/src/app/board-module/board/board.component.css
+++ b/src/app/board-module/board/board.component.css
@@ -8,9 +8,10 @@
 
 .board-header {
   margin: 1rem;
-  color: rgba(0, 0, 0, 0.6);
+  color: rgba(0, 0, 0, 0.9);
   font-size: 1.1rem;
   cursor: pointer;
+  font-weight: bold;
 }
 
 .list {
@@ -20,7 +21,7 @@
   overflow-y: hidden;
   padding-bottom: 8px;
   position: absolute;
-  top: 16vh;
+  top: 12vh;
   right: 0;
   bottom: 0;
   left: 0;
