feat(add-new-list): display new list form in a card
Added new card style for the add-new-list component
- style for the input field
-removed ngxtasker-inline-text-editor
-html for new-list mat-card includes input and actions
-removed isNewListEditClosed not required anymore
-renamed SetListTitle -> UpdateListTitle
-renamed SetBoardTitle ->  UpdateBoardTitle
-removed unused css from inline-text-editor comp css

--- a/src/app/board-module/list/add-list/add-list.component.css
+++ b/src/app/board-module/list/add-list/add-list.component.css
@@ -4,3 +4,10 @@
   width: 15rem;
   vertical-align: top;
 }
+
+.input-list-name {
+  border-radius: 0.2em;
+  padding: 0.3rem;
+  border: 1px solid #5c6bc0;
+  box-shadow: 0 0 2px 0 #1a237e;
+}
