--- a/src/app/board-module/board/board.component.css
+++ b/src/app/board-module/board/board.component.css
@@ -21,7 +21,7 @@
   overflow-y: hidden;
   padding-bottom: 8px;
   position: absolute;
-  top: 12vh;
+  top: 6.5rem;
   right: 0;
   bottom: 0;
   left: 0;
