fix(add-list): on enter save the new list entry
Changes to the way the getSelectedList now an array
Added AutofocusModule for the add list component

--- a/src/app/board-module/list/add-list/add-list.component.html
+++ b/src/app/board-module/list/add-list/add-list.component.html
@@ -8,7 +8,8 @@
         Enter List Name
       </mat-card-title>
     </mat-card-header>
-    <input type="text" #newListtitle class="input-list-name" autofocus type="text" placeholder="New List Title" />
+    <input type="text" #newListtitle class="input-list-name" autofocus type="text" placeholder="New List Title" (keyup.enter)="saveNewListTitle(newListtitle.value)"
+    />
     <mat-card-actions *ngIf="openTextInput">
       <button mat-button (click)="saveNewListTitle(newListtitle.value)">Add</button>
       <button mat-button (click)="toggleListTextEdit()">Cancel</button>
