--- a/src/app/board-module/board/board.component.html
+++ b/src/app/board-module/board/board.component.html
@@ -4,7 +4,7 @@
     </ngx-tasker-inline-text-editor>
   </div>
   <div class="list">
-    <ngx-tasker-list *ngFor="let listEntry of list" [list]="listEntry" [id]="listEntry.id"></ngx-tasker-list>
+    <ngx-tasker-list *ngFor="let listEntry of list | keyvalue" [list]="listEntry.value" [id]="listEntry.key"></ngx-tasker-list>
     <ngx-tasker-add-list></ngx-tasker-add-list>
   </div>
 </div>
