feature(card.state): extend the main user state to have cards child
Changes:
- A child state is create and included in the state module
- List component will use the cards state to populate its state.

--- a/src/app/board-module/list/list/list.component.html
+++ b/src/app/board-module/list/list/list.component.html
@@ -7,6 +7,8 @@
   </mat-card-header>
   <mat-divider [inset]="true" class="seperator"></mat-divider>
   <mat-card-content class="contents">
-    Contents
+    <div *ngFor="let card of cards | keyvalue">
+      {{card.value.title}}
+    </div>
   </mat-card-content>
 </mat-card>
