feature(cards): display the cards in the appropriate list
WIP: cards module
1. list component will use cards state
2. cards are displayed in appropriate lsit

--- a/src/app/board-module/list/list/list.component.html
+++ b/src/app/board-module/list/list/list.component.html
@@ -7,8 +7,8 @@
   </mat-card-header>
   <mat-divider [inset]="true" class="seperator"></mat-divider>
   <mat-card-content class="contents">
-    <div *ngFor="let card of cards | keyvalue">
-      {{card.value.title}}
+    <div *ngFor="let card of cards">
+      {{card.title}}
     </div>
   </mat-card-content>
 </mat-card>
