--- a/src/app/board-module/list/list/list.component.html
+++ b/src/app/board-module/list/list/list.component.html
@@ -8,5 +8,6 @@
   <mat-divider [inset]="true" class="seperator"></mat-divider>
   <mat-card-content class="contents">
     <ngxtasker-cards *ngFor="let card of cards" [cardId]="card.id" [card]="card"></ngxtasker-cards>
+    <ngxtasker-add-card></ngxtasker-add-card>
   </mat-card-content>
 </mat-card>
