feat(card): adds new card to a specified list
Changes:
1. Add card button style
2. Concern seperation for the cards portion from list component
3. Action to add a card to exsisting cards in a list

--- a/src/app/board-module/add-card/add-card.component.html
+++ b/src/app/board-module/add-card/add-card.component.html
@@ -1,5 +1,7 @@
 <div class="add-new-card">
-  <button mat-fab color="primary">
+  <button *ngIf="!openTextInput" class="add-card-btn" color="primary" mat-icon-button (click)="toggleCardTextEdit()">
     <mat-icon>add</mat-icon>
   </button>
+  <input *ngIf="openTextInput" type="text" #newCardTitle class="input-card-name" autofocus type="text" placeholder="New Card Title"
+    (keyup.enter)="saveNewCardTitle(newCardTitle.value)" (keyup.escape)="toggleCardTextEdit()" />
 </div>
