feat(card): displays the card desc
Includes:
1. card will have desc field
2. Cards type will have support for the field
3. cards component will display desc field

--- a/src/app/board-module/cards/cards.component.html
+++ b/src/app/board-module/cards/cards.component.html
@@ -7,6 +7,6 @@
   </mat-card-header>
   <mat-divider [inset]="true" class="seperator"></mat-divider>
   <mat-card-content class="contents">
-    Some desc
+    {{card.desc}}
   </mat-card-content>
 </mat-card>
