feat(card): update packages, provide textarea to update desc
-Updates the external packages and dependancies
-Provides the textarea field to update the conent description of the card

--- a/src/app/board-module/cards/cards.component.html
+++ b/src/app/board-module/cards/cards.component.html
@@ -7,6 +7,9 @@
   </mat-card-header>
   <mat-divider [inset]="true" class="seperator"></mat-divider>
   <mat-card-content class="contents">
-    {{card.desc}}
+    <span (click)="card.open=true;" *ngIf="!card.open">{{card.desc}}</span>
+    <mat-form-field *ngIf="card.open">
+      <textarea matInput #newDesc placeholder="">{{card.desc}}</textarea>
+    </mat-form-field>
   </mat-card-content>
 </mat-card>
